<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#009688"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/calc_title"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/calc_input"
        android:textColor="#888888"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="#C5C28C"
        android:gravity="center_vertical|end"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/calc_default"
        android:textColor="#333333"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInput" />

    <TextView
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_7"
        tools:text="7"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/btn8"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDisplay" />

    <TextView
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_8"
        tools:text="8"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btn7"
        app:layout_constraintEnd_toStartOf="@id/btn9"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintTop_toTopOf="@id/btn7" />

    <TextView
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_9"
        tools:text="9"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btn7"
        app:layout_constraintEnd_toStartOf="@id/btnPlus"
        app:layout_constraintStart_toEndOf="@id/btn8"
        app:layout_constraintTop_toTopOf="@id/btn7" />

    <TextView
        android:id="@+id/btnPlus"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_plus"
        tools:text="+"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btn7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn9"
        app:layout_constraintTop_toTopOf="@id/btn7" />

    <TextView
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_4"
        tools:text="4"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/btn5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn7" />

    <TextView
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_5"
        tools:text="5"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btn4"
        app:layout_constraintEnd_toStartOf="@id/btn6"
        app:layout_constraintStart_toEndOf="@id/btn4"
        app:layout_constraintTop_toTopOf="@id/btn4" />

    <TextView
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_6"
        tools:text="6"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btn4"
        app:layout_constraintEnd_toStartOf="@id/btnMinus"
        app:layout_constraintStart_toEndOf="@id/btn5"
        app:layout_constraintTop_toTopOf="@id/btn4" />

    <TextView
        android:id="@+id/btnMinus"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_minus"
        tools:text="-"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn6"
        app:layout_constraintTop_toTopOf="@id/btn4" />

    <TextView
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_1"
        tools:text="1"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/btn2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn4" />

    <TextView
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_2"
        tools:text="2"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btn1"
        app:layout_constraintEnd_toStartOf="@id/btn3"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toTopOf="@id/btn1" />

    <TextView
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_3"
        tools:text="3"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btn1"
        app:layout_constraintEnd_toStartOf="@id/btnMul"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintTop_toTopOf="@id/btn1" />

    <TextView
        android:id="@+id/btnMul"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_multiply"
        tools:text="*"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn3"
        app:layout_constraintTop_toTopOf="@id/btn1" />

    <TextView
        android:id="@+id/btnDot"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_dot"
        tools:text="."
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/btn0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1" />

    <TextView
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_0"
        tools:text="0"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btnDot"
        app:layout_constraintEnd_toStartOf="@id/btnEq"
        app:layout_constraintStart_toEndOf="@id/btnDot"
        app:layout_constraintTop_toTopOf="@id/btnDot" />

    <TextView
        android:id="@+id/btnEq"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_equal"
        tools:text="="
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btnDot"
        app:layout_constraintEnd_toStartOf="@id/btnDiv"
        app:layout_constraintStart_toEndOf="@id/btn0"
        app:layout_constraintTop_toTopOf="@id/btnDot" />

    <TextView
        android:id="@+id/btnDiv"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:text="@string/calc_divide"
        tools:text="/"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/btnDot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnEq"
        app:layout_constraintTop_toTopOf="@id/btnDot" />

</androidx.constraintlayout.widget.ConstraintLayout>